[package]
name = "wgpu-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[profile.release]
#lto = "true"

#[lib]
#proc-macro = true

[dependencies]
wgpu = "0.15"
winit = "0.28"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
bytemuck = "1.13"
strum = "0.24.1"
strum_macros = "0.24.1"
glam = "0.23"